--- a/service/price/rpc/etc/price.yaml
+++ b/service/price/rpc/etc/price.yaml
@@ -1,10 +1,15 @@
 Name: price.rpc
 ListenOn: 127.0.0.1:8081
-Mysql:
-  Datasource: demo:Demo1234@tcp(sh-cynosdbmysql-grp-ifioqjko.sql.tencentcdb.com:29987)/demo?parseTime=true
 Etcd:
   Hosts:
     - 127.0.0.1:2379
   Key: price.rpc
   User: root
   Pass: root
+Mysql:
+  Datasource: demo:Demo1234@tcp(sh-cynosdbmysql-grp-ifioqjko.sql.tencentcdb.com:29987)/demo?parseTime=true
+CacheRedis:
+  -
+    Host: 127.0.0.1:6379
+    Type: node
+    Pass: ~
